--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -71,6 +71,13 @@ es:
   created_exercises: Ejercicios Creados
   created_guides: Lecciones Creadas
   date: Fecha
+  deletion_motive:
+    inappropriate_content:
+      present: Incluye contenido inapropiado
+      past: Incluía contenido inapropiado
+    shares_solution:
+      present: Comparte la solución correcta
+      past: Compartía la solución correcta
   day: Día
   days: Días
   description: Descripción
@@ -187,6 +194,7 @@ es:
     one: 1 mensaje
     other: '%{count} mensajes'
   message: Mensaje
+  message_deleted: Este mensaje fue eliminado porque %{motive}, lo cual infringe las %{forum_terms}.
   messages: Mensajes
   messages_error: Los mensajes anteriores no están disponibles en este momento. ¡Volvé a intentar mas tarde!
   messages_pluralized:
