--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -66,6 +66,13 @@ en:
   create_submission: Submit
   created_at: Created at
   date: Date
+  deletion_motive:
+    inappropriate_content:
+      present: Includes inappropriate content
+      past: Included inappropriate content
+    shares_solution:
+      present: Shares the correct solution
+      past: Shared the correct solution
   description: Description
   destroy: Destroy
   destroy_message: delete the message
@@ -176,6 +183,7 @@ en:
     one: 1 message
     other: '%{count} messages'
   message: Message
+  message_deleted: This message was deleted because it %{motive}, which violates the %{forum_terms}.
   messages: Messages
   messages_error: Previous messages are unavailable. Please try again later.
   moderation: Mentoring
