--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -1,4 +1,3 @@
----
 pt:
   aborted: Opa, não pudemos avaliar sua solução
   abort_explanation_html: <li>Verifique se o seu programa não possui recursão ou um loop infinito</li> <li>Verifique se você tem uma conexão com a internet</li> <li>Espere um pouco e tente novamente</li>
@@ -68,6 +67,13 @@ pt:
   created_exercises: Exercícios criados
   created_guides: Lições criadas
   date: Data
+  deletion_motive:
+    inappropriate_content:
+      present: Inclui conteúdo impróprio
+      past: Incluiu conteúdo impróprio
+    shares_solution:
+      present: Compartilhe a solução correta
+      past: Compartilhou a solução correta
   day: Dia
   days: Dias
   description: Descrição
@@ -181,6 +187,7 @@ pt:
     one: 1 mensagem
     other: '%{count} mensagens'
   message: Mensagem
+  message_deleted: Esta mensagem foi excluída porque %{motive}, o que viola as %{forum_terms}.
   messages: Mensagens
   messages_error: As mensagens acima não estão disponíveis no momento. Eu tentei novamente mais tarde!
     mais tarde!
