--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -65,6 +65,7 @@ es-CL:
   created_exercises: Ejercicios Creados
   created_guides: Lecciones Creadas
   date: Fecha
+  deleted_by: Eliminado por %{deleter}
   deletion_motive:
     inappropriate_content:
       present: Incluye contenido inapropiado
