--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -72,6 +72,7 @@ es:
   created_guides: Lecciones Creadas
   date: Fecha
   deleted_by: Eliminado por %{deleter}
+  deleted_message_warning: Si infringís reiteradamente estas u otras reglas del Espacio de Consultas, se te puede prohibir el acceso al mismo o podrás sufrir consecuencias más severas, como la expulsión del curso.
   deletion_motive:
     inappropriate_content:
       present: Incluye contenido inapropiado
