--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -74,6 +74,9 @@ es-CL:
     shares_solution:
       present: Comparte la solución correcta
       past: Compartía la solución correcta
+    discloses_personal_information:
+      present: Divulga información personal
+      past: Divulgaba información personal
   day: Día
   days: Días
   description: Descripción
