--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -392,6 +392,7 @@ es:
   to_opened: Reabrir
   to_pending_review: Resolver
   to_solved: Resolver
+  toggle_read: "Marcar como leído/no leído"
   unauthorized_explanation: ¡Ups! Esto es lo que se conoce como %{error}, es decir que no iniciaste sesión.
   total: Total
   uncategorized: No categorizado
