Add needed locales for showing exam information

--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -32,6 +32,7 @@ es:
   authoring: Autores
   authoring_note_html: Esta guía fue desarrollada por %{authors} bajo los términos de la <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Licencia Creative Commons Compartir-Igual, 4.0</a>.
   authoring_note_with_collaborators_html: Esta guía fue desarrollada por %{authors} y <a href="%{collaborators}" target="_blank">muchas personas más</a>, bajo los términos de la <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Licencia Creative Commons Compartir-Igual, 4.0</a>.
+  available_time: Tiempo disponible
   back_to_mumuki: ¡Volvé a Mumuki!
   bibliotheca_ui: Biblioteca
   birthdate: Fecha de nacimiento
@@ -68,6 +69,7 @@ es:
   continue_lesson: ¡Continuá esta lección!
   continue_practicing: ¡Seguí aprendiendo!
   correct_answer: ¡La respuesta es correcta!
+  course: Curso
   create_submission: Enviar
   created_at: Creado
   created_at_asc: Antiguas
@@ -75,6 +77,7 @@ es:
   created_exercises: Ejercicios Creados
   created_guides: Lecciones Creadas
   date: Fecha
+  date_and_time: Fecha y hora
   deleted_by: Eliminado por %{deleter}
   deleted_message_warning: Si infringís reiteradamente estas u otras reglas del Espacio de Consultas, se te puede prohibir el acceso al mismo o podrás sufrir consecuencias más severas, como la expulsión del curso.
   deletion_motive:
@@ -388,6 +391,7 @@ es:
   terms_and_conditions_continue_disclaimer: Al continuar estás aceptando los %{terms_link}
   terms_and_conditions_must_be_accepted: Tenés que aceptar los términos y condiciones
   test_results: Resultados de las pruebas
+  time_in_minutes: "%{time} minutos"
   time_since: "hace %{time}"
   time_left: Te quedan
   title: Título
